--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "91video",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "keywords": [
-    "spider",
-    "video",
-    "climax"
-  ],
-  "author": "liuzy",
+  "name": "videos",
+  "version": "0.0.0",
+  "description": "videos",
+  "repository": "liuzy88.com",
   "license": "ISC",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "co": "^4.6.0",
-    "ejs": "^2.7.1",
-    "express": "^4.17.1",
-    "iconv-lite": "^0.5.0",
-    "sequelize": "^5.18.4",
-    "sqlite3": "^4.1.0"
+    "ejs": "^2.5.2",
+    "express": "^4.14.0",
+    "iconv-lite": "^0.4.13",
+    "mysql": "^2.11.1",
+    "promise": "^7.1.1",
+    "request": "^2.78.0"
   }
 }
